<resources>
    <string name="app_name">Note</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Пропустить</string>
    <string name="start">Начать</string>
    <string name="enter">enter</string>
    <string name="starttowork">Начать работу</string>
    <string name="number">+996 707 777 777</string>
    <string name="yourcode">Ваш код</string>
    <string name="send_again">Отправить снова</string>
    <string name="get_code">Получить код</string>
    <string name="telephone">telephone</string>
    <string name="code">code</string>
    <string name="заметки">Заметки</string>
    <string name="menu">menu</string>
    <string name="menu2">menu2</string>
    <string name="search">Поиск</string>
    <string name="searchnotes">Поиск Заметок</string>
    <string name="add">add</string>
    <string name="back">back</string>
    <string name="time">17:21</string>
    <string name="date">30 мая</string>
    <string name="text">text</string>
    <string name="register_for_number">Регистрация по номеру</string>
    <string name="Enter">Подтвердить</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="ready">Готово</string>
    <string name="name">Заголовок</string>
    <string name="starttowrite">Начните ввод</string>
</resources>
