<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey"
    tools:context=".ui.fragments.detail.NoteDetailFragment">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow"
        android:layout_marginStart="19dp"
        android:layout_marginTop="22dp"
        android:contentDescription="@string/back" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:layout_toEndOf="@+id/back"
        android:text="@string/date"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextClock
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/date"
        android:text="@string/time"
        android:textSize="14sp"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_one"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_alignBottom="@+id/cv_two"
        android:layout_marginEnd="30dp"
        android:layout_toStartOf="@+id/cv_two"
        android:backgroundTint="@color/dark_grey2"
        app:cardCornerRadius="16dp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_two"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        app:cardCornerRadius="16dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_third"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_alignBottom="@+id/cv_two"
        android:layout_marginStart="60dp"
        android:layout_toEndOf="@+id/cv_two"
        android:backgroundTint="@color/scarlet"
        app:cardCornerRadius="16dp" />


</RelativeLayout>