<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_margin="5dp"
    app:cardCornerRadius="16dp"
    tools:backgroundTint="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/item_note_titel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="23dp"
            android:maxLines="1"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/item_clock"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/item_note_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="23dp"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginStart="15dp"
            app:layout_constraintEnd_toStartOf="@id/item_date"
            app:layout_constraintStart_toStartOf="@id/item_note_titel"
            app:layout_constraintTop_toBottomOf="@id/item_note_titel"
            tools:ignore="TextContrastCheck" />

        <TextClock
            android:id="@+id/item_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@color/light_grey1"
            android:textSize="10sp"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SmallSp,TextContrastCheck" />

        <TextView
            android:id="@+id/item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@color/light_grey1"
            android:textSize="10sp"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/item_clock"
            tools:ignore="SmallSp,TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>